--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -8,6 +8,20 @@
 	</head>
 	<body>
 		<h1>Odin Recipes</h1>
-		<a href="./recipes//lasagna.html">Lasagna</a>
+		<ul>
+			<li>
+				<a href="./recipes//lasagna.html">Lasagna</a>
+			</li>
+			<li>
+				<a href="./recipes//chicken-dumplings.html"
+					>Chicken and Dumplings Casserole</a
+				>
+			</li>
+			<li>
+				<a href="./recipes/cheddar-mac-cheese.html"
+					>Cheddar Mac and Cheese</a
+				>
+			</li>
+		</ul>
 	</body>
 </html>
