--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -4,7 +4,96 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="./styles.css" />
 		<title>Landing Page</title>
 	</head>
-	<body></body>
+	<body>
+		<header>
+			<h1 class="header__logo">Header Logo</h1>
+			<ul class="header__nav">
+				<li class="header__nav-links">
+					<a href="#">header link one</a>
+				</li>
+				<li class="header__nav-links">
+					<a href="#"> header link two </a>
+				</li>
+				<li class="header__nav-links">
+					<a href="#">header link three</a>
+				</li>
+			</ul>
+		</header>
+		<section class="hero">
+			<div>
+				<h2 class="hero__title">This website is awesome</h2>
+				<p class="hero__text">
+					Lorem ipsum dolor sit amet consectetur adipisicing elit.
+					Nesciunt magni laboriosam repellendus, quibusdam corporis
+					quos, molestiae a impedit nulla dolore sit labore numquam
+					libero animi. Officia illo explicabo veniam ab.
+				</p>
+				<button type="button" class="hero__button">Sign up</button>
+			</div>
+			<div><img src="" alt="A placeholder for an image" /></div>
+		</section>
+		<section>
+			<h2>Some random information.</h2>
+			<div>
+				<!-- Box 1 -->
+				<div>
+					<img src="" alt="" />
+					<p>
+						Lorem ipsum, dolor sit amet consectetur adipisicing
+						elit. Necessitatibus
+					</p>
+				</div>
+				<!-- Box 2 -->
+				<div>
+					<img src="" alt="" />
+					<p>
+						Lorem ipsum, dolor sit amet consectetur adipisicing
+						elit. Necessitatibus
+					</p>
+				</div>
+				<!-- Box 3 -->
+				<div>
+					<img src="" alt="" />
+					<p>
+						Lorem ipsum, dolor sit amet consectetur adipisicing
+						elit. Necessitatibus
+					</p>
+				</div>
+				<!-- Box 4 -->
+				<div>
+					<img src="" alt="" />
+					<p>
+						Lorem ipsum, dolor sit amet consectetur adipisicing
+						elit. Necessitatibus
+					</p>
+				</div>
+			</div>
+		</section>
+		<section>
+			<blockquote>
+				This is an inspiring quote, or a testimonial from a customer.
+				Maybe it's just filing up space, or maybe people will actually
+				read it. Who knows? All I know is that it looks nice.
+			</blockquote>
+			<span>- Thor, god of Thunder</span>
+		</section>
+		<section>
+			<div>
+				<div>
+					<h3>Call to action! It's time!</h3>
+					<p>
+						Sign up for our product by clicking that button right
+						over there!
+					</p>
+				</div>
+				<button type="button">Sign up</button>
+			</div>
+		</section>
+		<footer>
+			<p>Copyright The Odin Project 2021</p>
+		</footer>
+	</body>
 </html>
